--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/eyfavicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link
@@ -14,7 +14,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Parker Hannifin Day By Hour</title>
+    <title>Day By Hour Application</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
